# astroponterr

./: Camera.py  README.md  ST_main.py  camera_test.py  pyproject.toml  quat.py  readme.md
src/observation/: Observation.py  Observer.py
src/sensor/: Camera.py
src/spatiotemporal/: Attitude.py  Epoch.py  Position.py
src/util/: enums.py  scribe.py  units.py
